fix: wider scrollbar

--- a/app/style.css
+++ b/app/style.css
@@ -900,7 +900,7 @@ input[type=range]::-webkit-slider-runnable-track {
 
 /* Track */
 .advSettings_settings::-webkit-scrollbar {
-  width: 10px; /* Set the width of the scrollbar */
+  width: 15px; /* Set the width of the scrollbar */
 }
 
 /* Handle */
@@ -918,7 +918,7 @@ input[type=range]::-webkit-slider-runnable-track {
 
 /* Track */
 .advSettings_settings::-webkit-scrollbar-track {
-  background: #f1f1f1; /* Set the color of the scrollbar track */
+  background: rgb(221, 221, 221); /* Set the color of the scrollbar track */
 }
 
 /* Handle when scrolling */
